<resources>
    <string name="app_name">Cost Estimation</string>

    <string name="title_project_information">Project Information</string>
    <string name="title_project_analysis">Project Analysis</string>
    <string name="title_all_projects">All Projects</string>
    <string name="title_tag_list">Tag List</string>
    <string name="title_help">Help</string>
    <string name="title_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>

    <string name="action_settings">Settings</string>
    <string name="action_sort_newest">Sort Newest Projects</string>
    <string name="action_sort_oldest">Sort Oldest Projects</string>
    <string name="action_sort_alphabetical">Sort Projects Alphabetical</string>
    <string name="action_sort_method_alphabetical">Sort Methods Alphabetical</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_project_creation">ProjectCreation</string>

    <string name="hello_world">Hello world!</string>
</resources>
